# spinning-radar-doppler

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  requirements.txt
.github/workflows/: build_and_test.yml  c-cpp.yml
apps/: CMakeLists.txt  benchmark_timing.cpp  encode_chirps_in_radar_data.cpp  generate_doppler_velocity_csv.cpp  generate_ego_velocity_csv.cpp
cmake/: spinning_radar_dopplerConfig.cmake.in
config/: doppler_config.yaml
include/srd/: srd.hpp
include/srd/common/: common.hpp  doppler_azimuth.hpp  doppler_types.hpp
include/srd/extractor/: doppler_extractor.hpp  extractor_config.hpp
include/srd/odometry/: doppler_odometry.hpp  odometry_config.hpp  trajectory.hpp
include/srd/utils/: imu.hpp  math.hpp  radar.hpp
python/: generate_video_from_csv.py  utils.py
scripts/: benchmark_timing.sh  build_package.sh  create_venv.sh  encode_chirps_in_radar_data.sh  generate_doppler_velocity_video.sh  print_ego_velocity_to_screen.sh
src/: CMakeLists.txt
src/extractor/: doppler_config.cpp  doppler_extractor.cpp  extractor_config.cpp
src/odometry/: doppler_odometry.cpp  odometry_config.cpp
src/utils/: imu.cpp  math.cpp  radar.cpp
tests/: CMakeLists.txt  test_imu.cpp  test_math.cpp  test_radar.cpp
